feat(landing): create controller & routes
